--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nile IT solutions</title>
-    <h1>Nile IT solutions Technology Zone</h1>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Shope Technology from Nile IT solutions</h1>
+    <h1 class="head">Nile IT solutions Technology Zone</h1>
+<div class="container"><img src="UOproject/students.jpg" alt="students">
+    <h3>Shope Technology from Nile IT solutions</h3>
     <h2>Training center</h2>  
     <h2>computer sales</h2>
     <h2>Maintenace and Network Security</h2>
+</div>    
 </body>
 </html>
